--- a/interview/阳哥/阳哥大厂面试第三季.md
+++ b/interview/阳哥/阳哥大厂面试第三季.md
@@ -226,7 +226,7 @@ public int[] twoSum(int[] nums, int target) {
 07_可重入锁理论
 ---------
 
-可重入锁又名递归锁，是**指在同一个线程在外层方法获取锁的时候，再进入该线程的的内层方法会自动获取锁（前提是锁对象得是同一个对象）**，不会因为之前已经获取过还没释放而阻塞。
+可重入锁又名递归锁，是**指在同一个线程在外层方法获取锁的时候，再进入该线程的内层方法会自动获取锁（前提是锁对象得是同一个对象）**，不会因为之前已经获取过还没释放而阻塞。
 
 Java 中 ReentrantLock 和 synchronized 都是可重入锁，可重入锁的一个优点是可一定程度避免死锁。
 
@@ -417,7 +417,9 @@ t4	 set Lock
 
 LockSupport 是用来创建锁和其他同步类的基本线程阻塞原语。
 
-LockSupport 中的 park() 和 unpark() 的作用分别是阻塞线程和解除阻塞线程。
+线程等待唤醒机制-
+
+**LockSupport 中的 park() 和 unpark() 的作用分别是阻塞线程和解除阻塞线程。**
 
 总之，比 wait/notify，await/signal 更强。
 
@@ -675,7 +677,7 @@ _为什么唤醒两次后阻塞两次，但最终结果还会阻塞线程？_
 15_AQS 理论初步
 -----------
 
-是什么？AbstractQueuedSynchronizer 抽象队列同步器。
+是什么？AbstractQueuedSynchronizer **抽象队列同步器**。
 
 ```
 public abstract class AbstractQueuedSynchronizer
