--- a/interview/阳哥/阳哥大厂面试第三季.md
+++ b/interview/阳哥/阳哥大厂面试第三季.md
@@ -4223,27 +4223,29 @@ Redis 调用 Lua 脚本通过 eval 命令保证代码执行的原子性
 RedisUtils：
 
 ```
+package com.lk.redis.util;
+
+import redis.clients.jedis.Jedis;
 import redis.clients.jedis.JedisPool;
 import redis.clients.jedis.JedisPoolConfig;
 
 public class RedisUtils {
+    private static JedisPool jedisPool;
 
-	private static JedisPool jedisPool;
-	
-	static {
-		JedisPoolConfig jpc = new JedisPoolConfig();
-		jpc.setMaxTotal(20);
-		jpc.setMaxIdle(10);
-		jedisPool = new JedisPool(jpc);
-	}
-	
-	public static JedisPool getJedis() throws Exception{
-		if(jedisPool == null)
-			throw new NullPointerException("JedisPool is not OK.");
-		return jedisPool;
-	}
-	
+    static {
+        JedisPoolConfig jpc = new JedisPoolConfig();
+        jpc.setMaxTotal(20);
+        jpc.setMaxIdle(10);
+        jedisPool = new JedisPool(jpc,"127.0.0.1",6379);
+    }
+
+    public static Jedis getJedis() throws Exception{
+        if(jedisPool == null)
+            throw new NullPointerException("JedisPool is not OK.");
+        return jedisPool.getResource();
+    }
 }
+
 ```
 
 ```
@@ -4460,22 +4462,22 @@ IllegalMonitorStateException: attempt to unlock lock，not loked by current thre
 60_redis 分布式锁总结回顾
 -----------------
 
-synchronized 单机版 oK，上分布式
+- synchronized 单机版 oK，上分布式
 
-nginx 分布式微服务单机锁不行
+- nginx 分布式微服务单机锁不行
 
-取消单机锁，上 Redis 分布式锁 setnx
+- 取消单机锁，上 Redis 分布式锁 setnx
 
-只加了锁，没有释放锁，出异常的话，可能无法释放锁, 必须要在代码层面 finally 释放锁
+- 只加了锁，没有释放锁，出异常的话，可能无法释放锁, 必须要在代码层面 finally 释放锁
 
-宕机了，部署了微服务代码层面根本没有走到 finally 这块，没办法保证解锁，这个 key 没有被删除，  
-需要有 lockKey 的过期时间设定
+- 宕机了，部署了微服务代码层面根本没有走到 finally 这块，没办法保证解锁，这个 key 没有被删除，  
+  需要有 lockKey 的过期时间设定
+- 为 redis 的分布式锁 key，增加过期时间，此外，还必须要 setnx + 过期时间必须同一行
 
-为 redis 的分布式锁 key，增加过期时间，此外，还必须要 setnx + 过期时间必须同一行
+- 必须规定只能自己删除自己的锁, 你不能把别人的锁删除了，防止张冠李戴，1 删 2，2 删 3
 
-必须规定只能自己删除自己的锁, 你不能把别人的锁删除了，防止张冠李戴，1 删 2，2 删 3
+- Redis 集群环境下，我们自己写的也不 oK 直接上 RedLock 之 Redisson 落地实现
 
-Redis 集群环境下，我们自己写的也不 oK 直接上 RedLock 之 Redisson 落地实现
 
 61_redis 内存调整默认查看
 -----------------
